# DAL_project

./: .gitignore  README.md  package.json  requirements.txt  start_dal_with_besu.py  start_microservices.py  stop_microservices.py  test_besu_integration.py  test_microservices_workflow.py  test_modern_api_workflow.py
al-engine/: main.py
backend/: requirements.txt
benchmark/substrate/contracts/group_contract/: Cargo.toml  Dockerfile  lib.rs
blockchain-service/: main.py  (+1 more)
dal-frontend/: LICENSE  MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
dal-frontend/dal_jupyterlab_extension/labextension/: package.json
dal-frontend/dal_jupyterlab_extension/labextension/static/: 115.65f3d8a667d8ce462341.js  181.52548df6465a03de5e65.js  377.f4fb084b931162df7fb1.js  531.54e0456d37c8cbd08a50.js  577.6824c2a80558ba69a0b7.js  790.0d04bc37eab469a97f96.js  868.4f262b0e0fbd680642f6.js  remoteEntry.3c792212e2b1552737b8.js  style.js  third-party-licenses.json
dal-frontend/examples/: DAL_Framework_Test.ipynb
dal-frontend/src/: icon.ts  index.ts
dal-frontend/src/components/: BlockchainSimulation.tsx  ConfigurationPanel.tsx  DALPanel.tsx  DALWidget.tsx  ModelInfo.tsx  ModelMetrics.tsx  ModelPerformanceHistory.tsx  SampleDisplay.tsx  VoteStatus.tsx  VotingHistory.tsx  VotingPanel.tsx  WalletConnect.tsx
dal-frontend/src/hooks/: useActiveLeaning.ts  useActiveLearning.ts  useVoting.ts  useWallet.ts
dal-frontend/src/services/: api.ts
dal-frontend/src/types/: sample.ts
dal-frontend/style/: index.css
dal-frontend/test/: index.html
(+181 files in other folders)
