[package]
name = "group_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "5.0.2", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.2" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
